Closed Bug 1248090 Opened 8 years ago Closed 8 years ago

Fix nsWindow::NPZCSupport unsafe usage of nsWindow::WidgetToScreenOffset

Categories

(Firefox for Android Graveyard :: Toolbar, defect)

defect
Not set
normal

Tracking

(firefox48 fixed)

RESOLVED FIXED
Firefox 48
Tracking Status
firefox48 --- fixed

People

(Reporter: rbarker, Assigned: rbarker)

References

Details

Attachments

(1 file)

nsWindow::WidgetToScreenOffset is not thread safe and should only be called in the Gecko main thread. Currently when dispatching events to APZ, it is being accessed from the UI thread in the class nsWindow::NPZCSupport. This class needs to either be updated to not use nsWindow::WidgetToScreenOffset or nsWindow::WidgetToScreenOffset needs to be made thread safe.
In fennec, there is currently only one widget and its offset is always (0,0) so removing the call appears to be the best solution for preventing the function from being called in the UI thread.
Assignee: nobody → rbarker
Depends on: 1232338
Attachment #8720566 - Flags: review?(snorp)
Attachment #8720566 - Flags: review?(snorp) → review+
https://hg.mozilla.org/mozilla-central/rev/0cd50254f228
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 48
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: